# MaxExpressKit

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  package.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mek/: drift-baseline.json
agents/: compliance.md  drift.md  ledger.md
commands/: mek-books.md  mek-compliance-audit.md  mek-drift.md  mek-init.md  mek-soc2.md  mek-status.md
docs/: compliance.md  concepts.md  drift.md  ledger.md  source-app-integration.md
docs/superpowers/plans/: 2026-05-10-mek-v0.1.0.md
docs/superpowers/specs/: 2026-05-10-mek-design.md
hooks/: hooks.json
hooks/scripts/: money_math_guard.py  post_task_drift.py  pre_risky_op.py
lib/: config.py  decimal_math.py  source_app_detect.py
lib/compliance_templates/: risky_op_patterns.py
lib/drift_scoring/: baseline.py  grades.py  python_preset.py
scaffold/: mek.toml
scaffold/compliance/: .gitignore  DECISION_LOG.md  HITL_TEMPLATE.md  RISKY_OPS.yaml
skills/compliance/: SKILL.md
skills/drift/: SKILL.md
skills/ledger/: SKILL.md
skills/ledger-companion/: SKILL.md
skills/using-mek/: SKILL.md
tests/: conftest.py
tests/integration/: test_hook_money_guard.py  test_hook_post_task_drift.py  test_hook_pre_risky_op.py  test_plugin_manifest.py  test_scaffold_payload.py
tests/unit/: test_compliance_patterns.py  test_config.py  test_decimal_math.py  test_drift_baseline.py  test_drift_grades.py  test_drift_python_preset.py  test_source_app_detect.py
