[project]
name = "maxexpresskit"
version = "0.1.0"
description = "Three guardrails for Claude Code: compliance, drift, ledger."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Max Bachaud", email = "maxbachaud@gmail.com" }]
dependencies = [
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["lib", "hooks"]
omit = ["tests/*"]
