[project]
name = "maxexpresskit"
version = "0.1.2"
description = "Three guardrails for Claude Code: compliance, drift, ledger."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Max Bachaud", email = "maxbachaud@gmail.com" }]
dependencies = [
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Only `lib` is a real Python package. The other top-level dirs (hooks, agents,
# skills, scaffold, commands) are plugin data — Claude Code reads them directly,
# they are not Python packages and must not be picked up by setuptools auto-discovery.
include = ["lib*"]
exclude = ["tests*", "scaffold*", "agents*", "skills*", "commands*", "docs*", "hooks*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Hook scripts run standalone and must bootstrap sys.path before importing from lib/.
"hooks/scripts/*.py" = ["E402"]

[tool.coverage.run]
source = ["lib", "hooks"]
omit = ["tests/*"]
